# besnard_agile_assigment

./: .gitignore  README.md
backend/: pyproject.toml  pytest.ini
backend/agile/: asgi.py  settings.py  urls.py  wsgi.py
backend/values_principles/: admin.py  apps.py  models.py
backend/values_principles/api/v1/: serializers.py  urls.py  viewsets.py
backend/values_principles/api/v1/tests/: test_viewsets.py
backend/values_principles/fixtures/: principles.json  values.json
backend/values_principles/management/commands/: seed.py
backend/values_principles/migrations/: 0001_initial.py
backend/values_principles/tests/: factories.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ContentList.vue  Home.vue  ModalForm.vue
frontend/tests/unit/: contentlist.spec.js  home.spec.js  modalform.spec.js
